# mCar

./: .gitignore  Cargo.toml  Dockerfile.arm  Dockerfile.cross  Dockerfile.x86_64  build.sh  camera.py  car.py  drive.py  ecosystem.config.js  mcar  mcar.service  nginx.conf  niki.py  pyproject.toml  requirements.txt  test.py  turn.py  web.py
.devcontainer/: Dockerfile  devcontainer.json
client/: index.html  package.json  rollup.config.js  vite.config.ts
client/public/: global.css  index.html
client/src/: App.svelte  Joytstick.svelte  app.css
client/src/lib/: Joytstick.svelte
mcar/: Car.py  server.py
mcar/static/: main.js  style.css
mcar/templates/: index.html
mcar/utils/: __init__.py  stream.py
resources/: index.html  joystick.js
server/: app.py  requirements.txt  server.py  sockets.py
server/utils/: __init__.py  car.py  motor.py  stream.py
src/: camera.rs  car.rs  main.rs  web.rs
src/car/: mod.rs  motor.rs
svelte-app/: rollup.config.js
svelte-app/src/: App.svelte  Joytstick.svelte
www/: index.html  main.js  style.css
