[package]
name = "mcar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["websocket"] }
rppal = "0.14.1"
serde_json = "1.0"
futures-util = "0.3"
tokio-stream = "0.1"
nokhwa = { version = "0.10", features = ["input-native"] }
