[package]
name = "mcar"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
mime_guess = { version = "2" }
rppal = "0.16"
rust-embed = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
nokhwa = { version = "0.10", features = ["input-native"] }
futures-channel = "0.3"
