[tool.poetry]
name = "mcar"
version = "0.1.0"
description = ""
authors = ["Victor Gorchilov <victor@gorchilov.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
Flask-SocketIO = "^5.0.1"
gpiozero = "^1.5.1"
gpio = "^0.3.0"
"RPi.GPIO" = "^0.7.0"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "mcar.server:start"
